인게임 pc 버전과 플레이 완료

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,7 +80,8 @@
                     <TextView
                         android:id="@+id/textView"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent"
+                        android:textSize="18sp"/>
 
                 </ScrollView>
                 <ScrollView
@@ -90,7 +91,8 @@
                     <TextView
                         android:id="@+id/users"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent"
+                        android:textSize="18sp"/>
 
                 </ScrollView>
 
